--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.COMP4270.Memphis.adsilence"
+    package="edu.COMP4270.Memphis.mutead"
     android:versionCode="1"
     android:versionName="1.0" >
 
