--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ bin/res/crunch/drawable-mdpi/ic_launcher.png
 
 bin/res/crunch/drawable-hdpi/ic_launcher.png
 bin/jarlist.cache
+
+bin/MuteAd.apk
+
+bin/dexedLibs/android-support-v4-dbb72508b254803bf81bc741a27761a3.jar
